# clasp

./: .gitignore  .rubocop.yml  CLASM.md  Cargo.toml  Makefile  README.md  rustfmt.toml  stats.rb
.github/: labeler.yml
assembler/: Cargo.toml
assembler/src/: compiling.rs  label.rs  lib.rs  main.rs
assembler/src/compiling/: tests.rs
assembler/src/tests/: compiling.rs  label.rs  mod.rs
assembler/src/tests/text_processing/: utility.rs
assembler/src/text_processing/: console_instructions.rs  general_instructions.rs  jump_instructions.rs  math_instructions.rs  mod.rs  program_builder.rs  test_helpers.rs  utility.rs
assembler/src/text_processing/comparison_instructions/: mod.rs  tests.rs
assembler/src/text_processing/console_instructions/: mod.rs  tests.rs
assembler/src/text_processing/general_instructions/: mod.rs
assembler/src/text_processing/jump_instructions/: mod.rs  tests.rs
assembler/src/text_processing/math_instructions/: mod.rs  tests.rs
assembler/src/text_processing/program_builder/: tests.rs
assembler/test_files/: hello_world.cclasp  hello_world.clasm
assembler/tests/: integration_tests.rs
compiler/: Cargo.toml
compiler/src/: compiling.rs  main.rs  run_options.rs
compiler/src/code_generation/: clasp_std.rs  mod.rs  tests.rs
compiler/src/run_options/: factory.rs
runtime/: Cargo.toml
runtime/src/: io.rs  lib.rs  main.rs  memory.rs  running.rs
runtime/src/instructions/: mod.rs
runtime/src/memory/: constants.rs  tests.rs  types.rs
runtime/test_files/: hello_world.cclasp
runtime/tests/: integration_with_assembler.rs
(+138 files in other folders)
