[package]
name = "clasp_assembler"
version = "0.2.0"
# TODO: up edition to 2021
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clasp_common = { path = "../common" }

# TODO: Can probably get rid of this hex import becase building own parser;
hex = "0.4.3"
ascii = "1.0.0"
