[package]
name = "clasp_compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clasp_common = { path = "../common" }
clasp_assembler = { path = "../assembler" }
clasp_parsing = { path = "../parsing" }
