[package]
name = "clasp_runtime_environment"
version = "0.1.0"
# TODO: up edition to 2021
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clasp_common = { path = "../common" }
clasp_assembler = { path = "../assembler" }

phf = { version = "0.10.0", features = [ "macros" ] }
ascii = "1.0.0"
